@@ -2,6 +2,11 @@
 
 Use Scala (Spark) API to implement the following task.
 
-Use scala 2.12.19,Spark 3.5.1.
+Use scala 2.12.19,Spark 3.5.1,JDK17
 
+Main class SparkDemo.scala running VM Options:
+--add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
+
+Unit Test class SparkDemoScalaTest.scala running VM Options:
+-ea -Djdk.attach.allowAttachSelf --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
 (https://github.com/ZHANGGUANGHE/sparkdemo)
